<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              tools:ignore="MissingPrefix"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_gravity="center"
              android:background="@color/white"
              android:minWidth="300dp"
              android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/dialog_title"
            style="@style/regular_text"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:paddingTop="10dp"
            android:text="@string/optionsDialogTitle"
            android:textColor="@color/label_textcolor"
            android:textSize="@dimen/header_textsize"/>


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="@dimen/margin_small"
        android:background="@color/label_textcolor">

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_album"
        style="@style/regular_text"
        android:layout_gravity="center"
        android:gravity="center"
        android:minWidth="300dp"
        android:padding="@dimen/padding_large"
        android:text="@string/album"
        android:textColor="@color/black"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="@dimen/margin_small"
        android:background="@color/label_textcolor">

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_camera"
        style="@style/regular_text"
        android:layout_gravity="center"
        android:gravity="center"
        android:minWidth="300dp"
        android:padding="@dimen/padding_large"
        android:text="@string/camera"
        android:textColor="@color/black"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="@dimen/margin_small"
        android:background="@color/label_textcolor">

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/signUpButtonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btCancel"
            style="@style/regular_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="center"
            android:padding="@dimen/padding_medium"
            android:text="@string/cancel"
            android:textColor="@color/black"
            android:textSize="@dimen/header_textsize"
            android:textStyle="bold"/>


    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="@dimen/margin_small"
        android:background="@color/label_textcolor">

    </RelativeLayout>

</LinearLayout>